--- a/static/login.html
+++ b/static/login.html
@@ -14,7 +14,7 @@
   <input type="submit" value="Submit">
 </form> 
 
-<p>Register for Sportsbet now!</p>
+<a href="/auth/signup"><p>Register for Sportsbet now!</p></a>
 
 </body>
 </html>
