--- a/static/register.html
+++ b/static/register.html
@@ -9,7 +9,7 @@
   <input type="text" name="username" placeholder="Enter your email">
   <br>
   Password:<br>
-  <input type="password" name="password">
+  <input type="password" name="password" placeholder="Set a password">
   <br><br>
   <input type="submit" value="Submit">
 </form> 
