--- a/static/home.html
+++ b/static/home.html
@@ -10,6 +10,19 @@
 </head>
 <body>
 
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+        <a class="navbar-brand" href="#">Sportsbet</a>
+        </div>
+        <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Dashboard</a></li>
+        <li><a href="/user/predictionHistory">Prediction history</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
+        </ul>
+</div>
+</nav>
+
 <div class="container">
         <h2>History</h2>
         <table class="table table-hover" id="non-bettable">
