--- a/static/login.html
+++ b/static/login.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>Login</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
 <body>
 
-<h2>Login to Sportsbet</h2>
-
-<form action="/auth/authenticate" method="POST" >
-  Email:<br>
-  <input type="text" name="username" placeholder="Enter your email">
-  <br>
-  Password:<br>
-  <input type="password" name="password" placeholder="Enter your password">
-  <br><br>
-  <input type="submit" value="Submit">
-</form> 
-
-<a href="/auth/signup"><p>Register for Sportsbet now!</p></a>
+<div class="container">
+  <h2>Login to Sportsbet</h2>
+  <form action="/auth/authenticate" method="POST">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="Enter email" name="username">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</div>
 
 </body>
 </html>
