--- a/static/user_history.html
+++ b/static/user_history.html
@@ -10,6 +10,20 @@
 </head>
 <body>
 
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+        <a class="navbar-brand" href="#">Sportsbet</a>
+        </div>
+        <ul class="nav navbar-nav">
+        <li><a href="/home">Dashboard</a></li>
+        <li class="active"><a href="#">Prediction history</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
+        </ul>
+    </div>
+</nav>
+            
+
 <div class="container">
         <h2>Prediction History</h2>
         <h3>Total rewards earned</h3>
