All donegit add .

--- a/static/user_history.html
+++ b/static/user_history.html
@@ -18,6 +18,7 @@
         <ul class="nav navbar-nav">
         <li><a href="/home">Dashboard</a></li>
         <li class="active"><a href="#">Prediction history</a></li>
+        <li><a href="/user/leaderboard">Leaderboard</a></a></li>
         <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </div>
