--- a/static/home.html
+++ b/static/home.html
@@ -18,6 +18,7 @@
         <ul class="nav navbar-nav">
         <li class="active"><a href="#">Dashboard</a></li>
         <li><a href="/user/predictionHistory">Prediction history</a></li>
+        <li><a href="/user/leaderboard">Leaderboard</a></a></li>
         <li><a href="/auth/logout">Logout</a></li>
         </ul>
 </div>
