--- a/static/user_history.html
+++ b/static/user_history.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.3"></script>
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -43,6 +46,12 @@
             </tbody>
         </table>
         </div>
+
+<div class="container">
+    <h4>Share your reward history with friends:</h4>
+    <div class="fb-share-button" data-href="http://127.0.0.1:3000/user/predictionHistory" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%3A3000%2Fuser%2FpredictionHistory&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+</div>
+
 
 <script>
     function getMatchResult(players, data) {
